# lisa

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/: color.rs  mgk8ball.rs  mod.rs  palette.rs  r34.rs  r_scrape.rs  role.rs
src/interface/: tui.rs
