[package]
name = "lisa"
version = "0.1.0"
authors = ["Kate <KatePainter96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
version = "0.10"
features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework", "collector"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]

[dependencies.image]
version = "0.23"

[dependencies.rand]
version = "0.8.3"

[dependencies.substring]
version = "1.4.0"

[dependencies.reqwest]
version = "0.11"
features = ["blocking"]

[dependencies.scraper]
version = "0.12"

[dependencies.select]
version = "0.5"

